--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
                     <div class="sottotitolo">• LEGENDA:</div>
                     <div class="corpo"></div>Il colore indica la somministazione della
                     <span style="color:#FFFDF5; background-color:#F8A984; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">PRIMA</span> e della
-                    <span style="color:#FFFDF5; background-color:#8B9BBF; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">SECONDA</span> dose di vaccino.
+                    <span style="color:#FFFDF5; background-color:#8B9BBF; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">SECONDA</span> dose di vaccino. La linea &nbsp;<img class="rombi" src="./assets/rombi.svg">&nbsp;
+                    indica invece il dato cumulato del totale delle dosi somministrate.
                 </div>
             </div>
         </div>
