--- a/categorie-vaccinate.html
+++ b/categorie-vaccinate.html
@@ -95,7 +95,39 @@
                         Quali categorie di persone sono già state vaccinate?
                     </a>
                 <div class="descrizione corpo">
-                    I grafici mostrano i volumi delle somministrazioni divisi per genere, età e categorie. In questo modo si può vedere in azione il piano vaccinale italiano.</div>
+                    I grafici mostrano i volumi delle somministrazioni divisi per genere, età e categorie. In questo modo si può vedere in azione il piano vaccinale italiano. <a class="button fonti" href="#popup1">Clicca qui per maggiori informazioni sulle categorie interessate.</a>
+
+                </div>
+                <div id="popup1" class="overlay">
+                    <div class="popup">
+                        <a class="close" href="#">&times;</a>
+                        <div class="content">
+                            <div class='tableauPlaceholder' id='viz1615805549070' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Va&#47;Vaccini_16155676329510&#47;Descrizionecat&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'
+                                    style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Vaccini_16155676329510&#47;Descrizionecat' /><param name='tabs' value='yes' /><param name='toolbar' value='no' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Va&#47;Vaccini_16155676329510&#47;Descrizionecat&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='it' /></object></div>
+                            <script type='text/javascript'>
+                                var divElement = document.getElementById('viz1615805549070');
+                                var vizElement = divElement.getElementsByTagName('object')[0];
+                                if (divElement.offsetWidth > 800) {
+                                    vizElement.style.minWidth = '650px';
+                                    vizElement.style.maxWidth = '100%';
+                                    vizElement.style.minHeight = '823px';
+                                    vizElement.style.maxHeight = (divElement.offsetWidth * 0.75) + 'px';
+                                } else if (divElement.offsetWidth > 500) {
+                                    vizElement.style.minWidth = '650px';
+                                    vizElement.style.maxWidth = '100%';
+                                    vizElement.style.minHeight = '823px';
+                                    vizElement.style.maxHeight = (divElement.offsetWidth * 0.75) + 'px';
+                                } else {
+                                    vizElement.style.width = '100%';
+                                    vizElement.style.height = '823px';
+                                }
+                                var scriptElement = document.createElement('script');
+                                scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+                                vizElement.parentNode.insertBefore(scriptElement, vizElement);
+                            </script>
+                        </div>
+                    </div>
+                </div>
 
                 <a class="bottone-off corpo bold" href="./vaccinazioni-per-regione.html">
                         Quante persone sono state vaccinate in ogni regione?
@@ -108,8 +140,8 @@
                 <div class="legenda">
                     <div class="sottotitolo">• LEGENDA:</div>
                     <div class="corpo"></div>Il colore indica le somministrazioni totali effettuate per
-                    <span style="color:#FFFDF5; background-color:#6EA788; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">CATEGORIA</span> e
-                    <span style="color:#FFFDF5; background-color:#E65E5E; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">GENERE</span>
+                    <span style="color:#FFFDF5; background-color:#8D8BD9; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">CATEGORIA</span> e
+                    <span style="color:#FFFDF5; background-color:#A9BF04; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">GENERE</span>
                 </div>
             </div>
         </div>
