--- a/index.html
+++ b/index.html
@@ -92,8 +92,9 @@
                         Quanti vaccini vengono fatti al giorno?
                     </a>
                 <div class="descrizione corpo">
-                    Ecco quante dosi di vaccino sono state fatte in Italia quotidianamente: potete vedere il numero totale di somministrazioni e notare la ripartizione per prima e seconda dose. Inoltre potete seguire l'andamento nel numero di dosi e richiami secondo una
-                    media mobile che considera il valore medio in una finestra di X giorni.</div>
+                    Ecco quante dosi di vaccino sono state fatte in Italia quotidianamente: potete vedere il numero totale di somministrazioni e notare la ripartizione per prima e seconda dose. Inoltre potete seguire l'andamento medio giornaliero del numero di dosi e richiami
+                    per ogni settimana. <br><br><span style="color:#B4B4B4; font-family: 'Georgia', 'Times', serif; font-size: 20px; font-weight: bold;">*</span> Stima del tempo necessario per raggiungere la copertura vaccinale del
+                    70% della popolazione italiana, se vaccinassimo con lo stesso ritmo degli ultimi 7 giorni.</div>
 
                 <a class="bottone-off corpo bold" href="./categorie-vaccinate.html">
                         Quali categorie di persone sono già state vaccinate?
