--- a/index.html
+++ b/index.html
@@ -26,20 +26,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <meta property="og:title" content="Vaccini Real Time">
-    <meta property="og:description" content="Dasboard che monitora l'andamento della campagna vaccinale in Italia." />
-    <meta property="og:image" content="https://dashboard-prova-hdm.github.io/cover.jpg">
+    <meta property="og:title" content="Covid-19: la mappa dei vaccini in Italia">
+    <meta property="og:description" content="Scopri come sta andando la campagna vaccinale in Italia: il numero di dosi consegnate, di quelle somministrate e le categorie interessate giorno per giorno, regione per regione" />
+    <meta property="og:image" content="https://vaccinocovid.wired.it/cover.jpg">
 
+    <meta name="robots" content="index,follow" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Vaccini Real Time">
-    <meta name="twitter:description" content="description" content="Dasboard che monitora l'andamento della campagna vaccinale in Italia.">
-    <meta name="twitter:image" content="https://dashboard-prova-hdm.github.io/cover.jpg">
+    <meta name="twitter:title" content="Covid-19: la mappa dei vaccini in Italia">
+    <meta name="twitter:description" content="description" content="Scopri come sta andando la campagna vaccinale in Italia: il numero di dosi consegnate, di quelle somministrate e le categorie interessate giorno per giorno, regione per regione">
+    <meta name="twitter:image" content="https://vaccinocovid.wired.it/cover.jpg">
 
-    <meta name="description" content="Dasboard che monitora l'andamento della campagna vaccinale in Italia." />
+    <meta name="description" content="Scopri come sta andando la campagna vaccinale in Italia: il numero di dosi consegnate, di quelle somministrate e le categorie interessate giorno per giorno, regione per regione" />
     <meta name="keywords" content="data visualization, dataviz, data, data science, vaccini, vaccini covid, vaccini fonti ufficiali, vaccini ministero, dashboard vaccini, coronavirus, covid, covid-19, campagna vaccinale" />
     <meta name="author" content="H-Farm Digital Marketing, H-Farm, Alessia Musio, Annalaura Cannavò, Giuseppe Iovino, Nicolò Marana">
     <meta name="copyright" content="H-Farm Digital Marketing, H-Farm, Alessia Musio, Annalaura Cannavò, Giuseppe Iovino, Nicolò Marana" />
+
     <link rel="icon" href="./favicon.png" type="image/png" />
+    <link rel="canonical" href="https://vaccinocovid.wired.it/" />
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -55,7 +58,7 @@
     <script src="https://code.jquery.com/jquery-3.4.0.min.js" type="text/javascript"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 
-    <title>Vaccini Real Time</title>
+    <title>Covid-19: la mappa dei vaccini in Italia</title>
 </head>
 
 <body>
@@ -101,7 +104,8 @@
 
     <div class="row">
         <div class="col- navigazione">
-            <div class="logo titolo">Vaccini Covid-19&nbsp;
+            <div class="logo titolo">
+                <h1>Vaccini Covid-19</h1>&nbsp;
                 <div class="sottotitolo">REAL TIME</div>
             </div>
 
