--- a/vaccinazioni-per-regione.html
+++ b/vaccinazioni-per-regione.html
@@ -2,6 +2,9 @@
 <html lang="it">
 
 <head>
+
+    <div id="CookieLaw" style="display:none;"></div>
+
     <!-- Google Tag Manager -->
     <script>
         (function(w, d, s, l, i) {
