--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
     <div class="row">
         <div class="col- navigazione">
             <div class="logo titolo">
-                <h1>Vaccini Covid-19</h1>&nbsp;
+                <h1>Vaccini Covid-19&nbsp;</h1>
                 <div class="sottotitolo">REAL TIME</div>
             </div>
 
@@ -345,12 +345,12 @@
             <span style="font-weight: bold;">Data Scientists:</span> Giuseppe Iovino, Nicolò Marana<br>
             <span style="font-weight: bold;">Data Visualization Designers:</span> Annalaura Cannavò, Alessia Musio
         </div>
-    </div>
 
-    <div class="optanon-show-settings-container">
-        <!-- Tasto inizio impostazioni cookies OneTrust -->
-        <a class="optanon-show-settings">Impostazioni dei cookie</a>
-        <!-- Tasto fine Impostazioni cookies OneTrust -->
+        <div class="optanon-show-settings-container credits corpo sito-hdm">
+            <!-- Tasto inizio impostazioni cookies OneTrust -->
+            <a class="optanon-show-settings">Impostazioni dei cookie</a>
+            <!-- Tasto fine Impostazioni cookies OneTrust -->
+        </div>
     </div>
 
 
