--- a/viz-hdm.html
+++ b/viz-hdm.html
@@ -12,6 +12,8 @@
 
     <style type="text/css">
         #graph {
+            margin-top: 100px;
+            margin-left: 100px;
             width: 700px;
         }
         
