--- a/viz-hdm.html
+++ b/viz-hdm.html
@@ -497,7 +497,7 @@
 			</g>
 		</g>
 	</g>
-	<g class="rosso rosso-desk">
+	<g class="rosso rosso_desk">
 		<path class="st2" d="M411.3,360.4c-40,68.1-127.6,90.9-195.7,51c-21.1-12.4-38.6-29.9-51-51l40.1-23.2c27.2,46,86.5,61.2,132.4,34
 			c14-8.3,25.7-20,34-34L411.3,360.4z"/>
 		<g>
@@ -553,7 +553,7 @@
 			</g>
 		</g>
 	</g>
-	<g class="rosso rosso-04">
+	<g class="rosso rosso_04">
 		<path class="st2" d="M190.5,454.9L167.3,495l0,0c-0.3,0.6-0.6,1.2-1,1.8l-23.2,40.1c-43.1-25.1-79-60.9-104-104l40.1-23.2
 			c0.6-0.3,1.2-0.7,1.8-1l0,0l40.1-23.2C137.8,414.2,161.8,438.2,190.5,454.9z"/>
 		<g>
@@ -708,7 +708,7 @@
 			</g>
 		</g>
 	</g>
-	<g class="rosso rosso-03">
+	<g class="rosso rosso_03">
 		<path class="st2" d="M287,527.7L287,527.7c0,0.7,0,1.3,0,2V576c-49.9-0.2-98.8-13.3-142.1-38.1l23.2-40.1c0.3-0.6,0.7-1.1,1-1.7
 			l0,0l23.2-40.1c28.9,16.5,61.5,25.2,94.8,25.4L287,527.7L287,527.7z"/>
 		<g>
@@ -1502,25 +1502,26 @@
 
     <div class="mouse tooltip tooltip_rosso_01">
         <p class="titolo">Seamless Experience</p>
-        <p>Progettiamo piattaforme partendo dalla strategia, alla software selection, alla data strategy, fino all'esecuzione progettuale e supporto evolutivo.
-
-
-
-
-
+        <p>Progettiamo piattaforme partendo dalla strategia, alla software selection, alla data strategy, fino all'esecuzione progettuale e supporto evolutivo
     </div>
     <div class="mouse tooltip tooltip_rosso_02">
         <p class="titolo">Marthech & Adtech</p>
         <p>Mettiamo la nostra esperienza in MarTech e AdTech al servizio dei nostri clienti per aiutarli nella raccolta ed integrazione delle diverse fonti di dati utili alle attività di marketing.</p>
     </div>
-
-
-
-
+    <div class="mouse tooltip tooltip_rosso_03">
+        <p class="titolo">Business Intelligence & Data Visualization</p>
+        <p>Sviluppiamo soluzioni customizzate per permettere ai nostri clienti un accesso diretto ed una visualizzazione ottimizzata dei KPIs condivisi.</p>
+    </div>
+    <div class="mouse tooltip tooltip_rosso_04">
+        <p class="titolo">Big Data & Advanced Analytics</p>
+        <p>Il team Analytics ha l’obiettivo di raccogliere, misurare e analizzare i dati, con lo scopo di descrivere e interpretare il comportamento degli utenti. Gli insight condivisi consentono di migliorare o ottimizzare la visibilità e l'efficienza dell'ecosistema
+            digitale del cliente.</p>
+    </div>
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.3.10/d3.min.js"></script>
     <script>
+        /*ROSSO 01*/
         var tooltip_rosso_01 = d3.selectAll(".tooltip_rosso_01:not(.css)");
         var HTML_rosso_01 = d3.select("div.tooltip_rosso_01.mouse");
         var spicchio_rosso_01 = d3.select("svg").select(".rosso_01");
@@ -1537,6 +1538,7 @@
                 return tooltip_rosso_01.style("opacity", "0");
             });
 
+        /*ROSSO 02*/
         var tooltip_rosso_02 = d3.selectAll(".tooltip_rosso_02:not(.css)");
         var HTML_rosso_02 = d3.select("div.tooltip_rosso_02.mouse");
         var spicchio_rosso_02 = d3.select("svg").select(".rosso_02");
@@ -1551,6 +1553,108 @@
             })
             .on("mouseout", function() {
                 return tooltip_rosso_02.style("opacity", "0");
+            });
+
+        /*ROSSO 03*/
+        var tooltip_rosso_03 = d3.selectAll(".tooltip_rosso_03:not(.css)");
+        var HTML_rosso_03 = d3.select("div.tooltip_rosso_03.mouse");
+        var spicchio_rosso_03 = d3.select("svg").select(".rosso_03");
+
+        spicchio_rosso_03.on("mouseover", function() {
+                tooltip_rosso_03.style("opacity", "1");
+            })
+            .on("mousemove", function() {
+                HTML_rosso_03
+                    .style("left", Math.max(0, d3.event.pageX - 150) + "px")
+                    .style("top", (d3.event.pageY + 20) + "px");
+            })
+            .on("mouseout", function() {
+                return tooltip_rosso_03.style("opacity", "0");
+            });
+
+        /*ROSSO 04*/
+        var tooltip_rosso_04 = d3.selectAll(".tooltip_rosso_04:not(.css)");
+        var HTML_rosso_04 = d3.select("div.tooltip_rosso_04.mouse");
+        var spicchio_rosso_04 = d3.select("svg").select(".rosso_04");
+
+        spicchio_rosso_04.on("mouseover", function() {
+                tooltip_rosso_04.style("opacity", "1");
+            })
+            .on("mousemove", function() {
+                HTML_rosso_04
+                    .style("left", Math.max(0, d3.event.pageX - 150) + "px")
+                    .style("top", (d3.event.pageY + 20) + "px");
+            })
+            .on("mouseout", function() {
+                return tooltip_rosso_04.style("opacity", "0");
+            });
+
+        /*GRIGIO 01*/
+        var tooltip_grigio_01 = d3.selectAll(".tooltip_grigio_01:not(.css)");
+        var HTML_grigio_01 = d3.select("div.tooltip_grigio_01.mouse");
+        var spicchio_grigio_01 = d3.select("svg").select(".grigio_01");
+
+        spicchio_grigio_01.on("mouseover", function() {
+                tooltip_grigio_01.style("opacity", "1");
+            })
+            .on("mousemove", function() {
+                HTML_grigio_01
+                    .style("left", Math.max(0, d3.event.pageX - 150) + "px")
+                    .style("top", (d3.event.pageY + 20) + "px");
+            })
+            .on("mouseout", function() {
+                return tooltip_grigio_01.style("opacity", "0");
+            });
+
+        /*GRIGIO 02*/
+        var tooltip_grigio_02 = d3.selectAll(".tooltip_grigio_02:not(.css)");
+        var HTML_grigio_02 = d3.select("div.tooltip_grigio_02.mouse");
+        var spicchio_grigio_02 = d3.select("svg").select(".grigio_02");
+
+        spicchio_grigio_02.on("mouseover", function() {
+                tooltip_grigio_02.style("opacity", "1");
+            })
+            .on("mousemove", function() {
+                HTML_grigio_02
+                    .style("left", Math.max(0, d3.event.pageX - 150) + "px")
+                    .style("top", (d3.event.pageY + 20) + "px");
+            })
+            .on("mouseout", function() {
+                return tooltip_grigio_02.style("opacity", "0");
+            });
+
+        /*GRIGIO 03*/
+        var tooltip_grigio_03 = d3.selectAll(".tooltip_grigio_03:not(.css)");
+        var HTML_grigio_03 = d3.select("div.tooltip_grigio_03.mouse");
+        var spicchio_grigio_03 = d3.select("svg").select(".grigio_03");
+
+        spicchio_grigio_03.on("mouseover", function() {
+                tooltip_grigio_03.style("opacity", "1");
+            })
+            .on("mousemove", function() {
+                HTML_grigio_03
+                    .style("left", Math.max(0, d3.event.pageX - 150) + "px")
+                    .style("top", (d3.event.pageY + 20) + "px");
+            })
+            .on("mouseout", function() {
+                return tooltip_grigio_03.style("opacity", "0");
+            });
+
+        /*GRIGIO 04*/
+        var tooltip_grigio_04 = d3.selectAll(".tooltip_grigio_04:not(.css)");
+        var HTML_grigio_04 = d3.select("div.tooltip_grigio_04.mouse");
+        var spicchio_grigio_04 = d3.select("svg").select(".grigio_04");
+
+        spicchio_grigio_04.on("mouseover", function() {
+                tooltip_grigio_04.style("opacity", "1");
+            })
+            .on("mousemove", function() {
+                HTML_grigio_04
+                    .style("left", Math.max(0, d3.event.pageX - 150) + "px")
+                    .style("top", (d3.event.pageY + 20) + "px");
+            })
+            .on("mouseout", function() {
+                return tooltip_grigio_04.style("opacity", "0");
             });
     </script>
 
