--- a/viz-hdm.html
+++ b/viz-hdm.html
@@ -43,6 +43,7 @@
             font-weight: 700;
             line-height: 1;
             padding-bottom: 8px;
+            letter-spacing: 0.5px;
         }
         
         g:hover+g.tooltip.css {
@@ -64,7 +65,7 @@
 		.st8{fill:#4F4E50;}
 		.st9{fill:#FFFFFF;stroke:#000000;stroke-miterlimit:10;}
 	</style>
-	<g class="grigio grigio-desk">
+	<g class="grigio grigio_desk">
 		<path class="st0" d="M289,145c79,0.6,142.5,65,142,144c-0.2,24.4-6.6,48.4-18.7,69.6l-40.1-23.2C398.4,289,382,230,335.5,203.8
 			c-14.2-8-30.2-12.3-46.5-12.5V145z"/>
 		<g>
@@ -108,7 +109,7 @@
 			</g>
 		</g>
 	</g>
-	<g class="grigio grigio-04">
+	<g class="grigio grigio_04">
 		<path class="st0" d="M576,289c-0.2,49.9-13.3,98.8-38.1,142.1L497.8,408c-0.6-0.3-1.1-0.7-1.7-1l0,0L456,383.8
 			c16.5-28.9,25.2-61.5,25.4-94.8h46.3v0.1c0.7,0,1.3-0.1,2-0.1H576z"/>
 		<g>
@@ -207,7 +208,7 @@
 			</g>
 		</g>
 	</g>
-	<g class="grigio grigio-03">
+	<g class="grigio grigio_03">
 		<path class="st0" d="M576,287h-46.3c-0.7,0-1.3,0-2-0.1v0.1h-46.3c-0.2-33.3-8.9-65.9-25.4-94.8l40.1-23.2l0,0
 			c0.5-0.4,1.1-0.7,1.7-1l40.1-23.2C562.7,188.2,575.8,237.1,576,287z"/>
 		<g>
@@ -310,7 +311,7 @@
 			</g>
 		</g>
 	</g>
-	<g class="grigio grigio-02">
+	<g class="grigio grigio_02">
 		<path class="st0" d="M408,78.2c-0.3,0.6-0.7,1.1-1,1.7l0,0L383.8,120c-28.9-16.5-61.5-25.2-94.8-25.4V48.3h0.1c0-0.7-0.1-1.3-0.1-2
 			V0c49.9,0.2,98.8,13.3,142.1,38.1L408,78.2z"/>
 		<g>
@@ -391,7 +392,7 @@
 			</g>
 		</g>
 	</g>
-	<g class="grigio grigio-01">
+	<g class="grigio grigio_01">
 		<path class="st0" d="M496.8,166.3c-0.6,0.3-1.2,0.7-1.8,1l0,0l-40.1,23.2c-16.8-28.7-40.7-52.6-69.4-69.4L408.7,81l0,0
 			c0.3-0.6,0.6-1.2,1-1.8l23.2-40.1c43.1,25.1,79,60.9,104,104L496.8,166.3z"/>
 		<g>
@@ -994,7 +995,7 @@
 			</g>
 		</g>
 	</g>
-	<g class="nero nero-desk">
+	<g class="nero nero_desk">
 		<path class="st4" d="M163.7,358.6c-39-68.7-15-156,53.7-195c21.2-12.1,45.2-18.5,69.6-18.7v46.3c-53.4,0.6-96.2,44.3-95.7,97.7
 			c0.2,16.3,4.5,32.3,12.5,46.5L163.7,358.6z"/>
 		<g>
@@ -1038,7 +1039,7 @@
 				l-4-5.5c-0.4-0.5-0.7-0.8-1.1-0.8c-0.4-0.1-0.8,0.1-1.3,0.5c-0.7,0.5-1,1.1-0.9,1.9l4.4,6l-2.4,1.7l-6.2-8.5L211.3,186.5z"/>
 		</g>
 	</g>
-	<g class="nero nero-04">
+	<g class="nero nero_04">
 		<path class="st4" d="M287,46.3c0,0.7,0,1.3-0.1,2h0.1v46.3c-33.3,0.2-65.9,8.9-94.8,25.4L169,79.9l0,0c-0.4-0.5-0.7-1.1-1-1.7
 			l-23.2-40.1C188.2,13.3,237.1,0.2,287,0V46.3z"/>
 		<g>
@@ -1144,7 +1145,7 @@
 			</g>
 		</g>
 	</g>
-	<g class="nero nero-03">
+	<g class="nero nero_03">
 		<path class="st4" d="M190.5,121.1c-28.7,16.8-52.6,40.7-69.4,69.4L81,167.3l0,0c-0.6-0.3-1.2-0.6-1.8-1l-40.1-23.2
 			c25.1-43.1,60.9-79,104-104l23.2,40.1c0.3,0.6,0.7,1.2,1,1.8l0,0L190.5,121.1z"/>
 		<g>
@@ -1216,7 +1217,7 @@
 			</g>
 		</g>
 	</g>
-	<g class="nero nero-02">
+	<g class="nero nero_02">
 		<path class="st4" d="M120.1,192.2c-16.5,28.9-25.2,61.5-25.4,94.8H48.3v-0.1c-0.7,0-1.3,0.1-2,0.1H0c0.2-49.9,13.3-98.8,38.1-142.1
 			L78.2,168c0.6,0.3,1.1,0.7,1.7,1l0,0L120.1,192.2z"/>
 		<g>
@@ -1298,7 +1299,7 @@
 			</g>
 		</g>
 	</g>
-	<g class="nero nero-01">
+	<g class="nero nero_01">
 		<path class="st4" d="M120.1,383.8L79.9,407l0,0c-0.5,0.4-1.1,0.7-1.7,1l-40.1,23.2C13.3,387.8,0.2,338.9,0,289h46.3
 			c0.7,0,1.3,0,2,0.1V289h46.3C94.8,322.3,103.6,354.9,120.1,383.8z"/>
 		<g>
@@ -1498,6 +1499,36 @@
 
 	<g class="tooltip tooltip_rosso_02 mouse">
 	</g>
+
+	<g class="tooltip tooltip_rosso_03 mouse">
+	</g>
+
+	<g class="tooltip tooltip_rosso_04 mouse">
+	</g>
+
+	<g class="tooltip tooltip_nero_01 mouse">
+	</g>
+
+	<g class="tooltip tooltip_nero_02 mouse">
+	</g>
+
+	<g class="tooltip tooltip_nero_03 mouse">
+	</g>
+
+	<g class="tooltip tooltip_nero_04 mouse">
+	</g>
+
+	<g class="tooltip tooltip_grigio_01 mouse">
+	</g>
+
+	<g class="tooltip tooltip_grigio_02 mouse">
+	</g>
+
+	<g class="tooltip tooltip_grigio_03 mouse">
+	</g>
+
+	<g class="tooltip tooltip_grigio_05 mouse">
+	</g>
 	</svg>
 
     <div class="mouse tooltip tooltip_rosso_01">
@@ -1516,6 +1547,42 @@
         <p class="titolo">Big Data & Advanced Analytics</p>
         <p>Il team Analytics ha l’obiettivo di raccogliere, misurare e analizzare i dati, con lo scopo di descrivere e interpretare il comportamento degli utenti. Gli insight condivisi consentono di migliorare o ottimizzare la visibilità e l'efficienza dell'ecosistema
             digitale del cliente.</p>
+    </div>
+
+    <div class="mouse tooltip tooltip_nero_01">
+        <p class="titolo">Awareness Advertising</p>
+        <p>Accompagniamo i nostri clienti nelle attività di pianificazione, ottimizzazione ed analisi delle campagne di brand awareness. Grazie al nostro approccio che combina dati e creatività siamo in grado di offrire ai nostri clienti innovativi formati
+            di branded entertainment.</p>
+    </div>
+    <div class="mouse tooltip tooltip_nero_02">
+        <p class="titolo">Performance Advertising</p>
+        <p>Attraverso un approccio fortemente data-driven aiutiamo i nostri clienti a sviluppare e ottimizzare le attività di performance adv, migliorando il ritorno per ogni euro speso.</p>
+    </div>
+    <div class="mouse tooltip tooltip_nero_03">
+        <p class="titolo">Multichannel Strategy</p>
+        <p>Garantiamo la coerenza delle iniziative di marketing sui diversi touchpoints personalizzando i contenuti sulla base di cluster ed intent specifici.</p>
+    </div>
+    <div class="mouse tooltip tooltip_nero_04">
+        <p class="titolo">Event management & Field Marketing</p>
+        <p>I percorsi degli utenti vanno oltre i confini digitali: tra i nostri servizi integriamo anche attività di creazione e organizzazione eventi e di field marketing, portate avanti con un approccio fortemente data-driven orientato a massimizzare il
+            ritorno dalla combinazione di attività on e offline.</p>
+    </div>
+
+    <div class="mouse tooltip tooltip_grigio_01">
+        <p class="titolo">Content Creation</p>
+        <p>Definiamo strategie editoriali volte a massimizzare la visibilità dei contenuti dei nostri clienti, sia in ottica di aumento di awareness che come supporto alle performance.</p>
+    </div>
+    <div class="mouse tooltip tooltip_grigio_02">
+        <p class="titolo">Content Visibility (SEO)</p>
+        <p>Aiutiamo i nostri clienti a massimizzare la visibilità dei propri contenuti andando a rispondere ai bisogni informativi degli utenti target.</p>
+    </div>
+    <div class="mouse tooltip tooltip_grigio_03">
+        <p class="titolo">Social & Digital PR</p>
+        <p>Combiniamo dati e creatività per andare oltre i paradigmi ed impostare, valutare e ottimizzare le nostre strategie. Andiamo oltre gli indicatori tradizionali di performance, identificando le attività che hanno un reale ritorno sull’investimento.</p>
+    </div>
+    <div class="mouse tooltip tooltip_grigio_04">
+        <p class="titolo">Creative Direction</p>
+        <p>Sfruttiamo l’approfondita conoscenza dei diversi touchpoint digitali per ideare concept creativi che lavorino in maniera integrata lungo il customer journey degli utenti.</p>
     </div>
 
 
@@ -1655,6 +1722,74 @@
             })
             .on("mouseout", function() {
                 return tooltip_grigio_04.style("opacity", "0");
+            });
+
+        /*NERO 01*/
+        var tooltip_nero_01 = d3.selectAll(".tooltip_nero_01:not(.css)");
+        var HTML_nero_01 = d3.select("div.tooltip_nero_01.mouse");
+        var spicchio_nero_01 = d3.select("svg").select(".nero_01");
+
+        spicchio_nero_01.on("mouseover", function() {
+                tooltip_nero_01.style("opacity", "1");
+            })
+            .on("mousemove", function() {
+                HTML_nero_01
+                    .style("left", Math.max(0, d3.event.pageX - 150) + "px")
+                    .style("top", (d3.event.pageY + 20) + "px");
+            })
+            .on("mouseout", function() {
+                return tooltip_nero_01.style("opacity", "0");
+            });
+
+        /*NERO 02*/
+        var tooltip_nero_02 = d3.selectAll(".tooltip_nero_02:not(.css)");
+        var HTML_nero_02 = d3.select("div.tooltip_nero_02.mouse");
+        var spicchio_nero_02 = d3.select("svg").select(".nero_02");
+
+        spicchio_nero_02.on("mouseover", function() {
+                tooltip_nero_02.style("opacity", "1");
+            })
+            .on("mousemove", function() {
+                HTML_nero_02
+                    .style("left", Math.max(0, d3.event.pageX - 150) + "px")
+                    .style("top", (d3.event.pageY + 20) + "px");
+            })
+            .on("mouseout", function() {
+                return tooltip_nero_02.style("opacity", "0");
+            });
+
+        /*NERO 03*/
+        var tooltip_nero_03 = d3.selectAll(".tooltip_nero_03:not(.css)");
+        var HTML_nero_03 = d3.select("div.tooltip_nero_03.mouse");
+        var spicchio_nero_03 = d3.select("svg").select(".nero_03");
+
+        spicchio_nero_03.on("mouseover", function() {
+                tooltip_nero_03.style("opacity", "1");
+            })
+            .on("mousemove", function() {
+                HTML_nero_03
+                    .style("left", Math.max(0, d3.event.pageX - 150) + "px")
+                    .style("top", (d3.event.pageY + 20) + "px");
+            })
+            .on("mouseout", function() {
+                return tooltip_nero_03.style("opacity", "0");
+            });
+
+        /*NERO 04*/
+        var tooltip_nero_04 = d3.selectAll(".tooltip_nero_04:not(.css)");
+        var HTML_nero_04 = d3.select("div.tooltip_nero_04.mouse");
+        var spicchio_nero_04 = d3.select("svg").select(".nero_04");
+
+        spicchio_nero_04.on("mouseover", function() {
+                tooltip_nero_04.style("opacity", "1");
+            })
+            .on("mousemove", function() {
+                HTML_nero_04
+                    .style("left", Math.max(0, d3.event.pageX - 150) + "px")
+                    .style("top", (d3.event.pageY + 20) + "px");
+            })
+            .on("mouseout", function() {
+                return tooltip_nero_04.style("opacity", "0");
             });
     </script>
 
