--- a/viz-hdm.html
+++ b/viz-hdm.html
@@ -110,103 +110,46 @@
 		</g>
 	</g>
 	<g class="grigio grigio_04">
-		<path class="st0" d="M576,289c-0.2,49.9-13.3,98.8-38.1,142.1L497.8,408c-0.6-0.3-1.1-0.7-1.7-1l0,0L456,383.8
-			c16.5-28.9,25.2-61.5,25.4-94.8h46.3v0.1c0.7,0,1.3-0.1,2-0.1H576z"/>
-		<g>
-			<g>
-				<g>
-					<path d="M535,331.9c-1.2-0.3-2.1-0.9-2.6-1.9s-0.7-2.1-0.5-3.5c0.2-1.5,0.9-2.6,2-3.3c1.1-0.7,2.5-0.9,4.2-0.7l0.7,0.1
-						c1.1,0.2,2,0.5,2.8,1s1.3,1.2,1.6,2s0.4,1.7,0.3,2.7c-0.2,1.4-0.7,2.4-1.6,3.1s-1.9,1.1-3.2,1l0.4-2.4c0.7,0.1,1.3-0.1,1.7-0.4
-						s0.6-0.8,0.8-1.6c0.1-0.8-0.1-1.5-0.5-1.9s-1.3-0.8-2.5-1l-0.8-0.1c-1.2-0.2-2.1-0.1-2.8,0.2s-1,0.9-1.1,1.7
-						c-0.1,0.8,0,1.3,0.2,1.8c0.3,0.4,0.7,0.7,1.4,0.9L535,331.9z"/>
-				</g>
-				<g>
-					<path d="M536.3,338.8c0.1-0.3,0.2-0.6,0.2-0.8c0.2-0.9,0-1.5-0.5-1.9l-5.4-1l0.4-2.3l8.3,1.6l-0.4,2.2l-1-0.1
-						c0.7,0.6,0.9,1.3,0.8,2.2c0,0.3-0.1,0.5-0.2,0.7L536.3,338.8z"/>
-				</g>
-				<g>
-					<path d="M528.8,342.5c0.3-1.3,0.9-2.2,1.8-2.9c0.9-0.6,2-0.8,3.2-0.5h0.2c0.8,0.2,1.5,0.5,2.1,1s1,1.1,1.2,1.8
-						c0.2,0.7,0.2,1.4,0.1,2.2c-0.3,1.2-0.8,2-1.7,2.6s-1.9,0.6-3.3,0.3l-0.9-0.2l1.2-5.5c-0.6,0-1,0.1-1.4,0.4s-0.7,0.7-0.8,1.3
-						c-0.2,0.9,0,1.7,0.5,2.3l-1.5,0.9c-0.4-0.5-0.6-1-0.8-1.7C528.6,343.9,528.7,343.2,528.8,342.5z M535.7,343.7
-						c0.1-0.5,0-0.9-0.2-1.2s-0.6-0.6-1.1-0.8l-0.7,3.2h0.2c0.5,0.1,0.9,0,1.2-0.2S535.5,344.2,535.7,343.7z"/>
-				</g>
-				<g>
-					<path d="M526.5,352.3c0.2-0.1,0.5-0.1,0.8,0c-0.4-0.7-0.5-1.5-0.3-2.4c0.2-0.8,0.6-1.5,1.2-1.9c0.6-0.4,1.3-0.6,2-0.4
-						c0.9,0.2,1.4,0.7,1.7,1.5s0.3,1.8-0.1,3.1l-0.3,1.1l0.5,0.1c0.4,0.1,0.7,0.1,1-0.1c0.3-0.1,0.5-0.4,0.6-0.9c0.1-0.4,0.1-0.7,0-1
-						s-0.3-0.4-0.6-0.5l0.6-2.3c0.5,0.1,0.9,0.4,1.2,0.8s0.5,0.9,0.6,1.6c0.1,0.6,0,1.3-0.2,2c-0.3,1.1-0.8,1.8-1.4,2.3
-						c-0.7,0.5-1.5,0.6-2.4,0.4l-3.5-0.9c-0.8-0.2-1.4-0.2-1.8-0.1H526L526.5,352.3z M528.6,350.8c-0.1,0.3-0.1,0.7,0,1
-						s0.2,0.6,0.4,0.8l1.4,0.4l0.2-0.9c0.3-1.1,0.1-1.9-0.7-2.1h-0.1c-0.3-0.1-0.5,0-0.8,0.1C528.8,350.2,528.7,350.5,528.6,350.8z"
-						/>
-				</g>
-				<g>
-					<path d="M534.8,361.8l-2-0.6l-0.4,1.5l-1.6-0.5l0.4-1.5l-4-1.2c-0.3-0.1-0.5-0.1-0.7,0s-0.3,0.3-0.4,0.6
-						c-0.1,0.3-0.1,0.5-0.1,0.7l-1.6-0.5c0-0.5,0.1-1,0.2-1.4c0.5-1.6,1.5-2.2,3-1.8l4.4,1.3l0.4-1.2l1.6,0.5l-0.4,1.2l2,0.6
-						L534.8,361.8z"/>
-				</g>
-				<g>
-					<path d="M523.1,363.9l0.7-2.3l8.1,2.6l-0.7,2.3L523.1,363.9z M534,364.7c0.3,0.1,0.6,0.3,0.7,0.6c0.1,0.3,0.1,0.6,0,1
-						s-0.3,0.7-0.6,0.8s-0.6,0.2-0.9,0.1c-0.3-0.1-0.6-0.3-0.7-0.6c-0.1-0.3-0.1-0.6,0-1s0.3-0.7,0.6-0.8
-						C533.4,364.7,533.7,364.6,534,364.7z"/>
-				</g>
-				<g>
-					<path d="M524,369.8l4.8,3.4l-0.8,2.3l-7-5.6l0.7-2.1l9-0.1l-0.8,2.3L524,369.8z"/>
-				</g>
-				<g>
-					<path d="M518.1,377.4c0.5-1.2,1.2-2.1,2.2-2.6s2.1-0.5,3.3,0l0.2,0.1c0.8,0.3,1.4,0.7,1.9,1.3c0.5,0.6,0.8,1.2,0.9,1.9
-						c0.1,0.7,0,1.5-0.3,2.2c-0.4,1.1-1.1,1.9-2.1,2.3c-0.9,0.4-2,0.3-3.3-0.1l-0.9-0.3l2-5.3c-0.5-0.1-1-0.1-1.5,0.2
-						c-0.4,0.2-0.8,0.6-1,1.2c-0.3,0.9-0.3,1.6,0.1,2.3l-1.6,0.6c-0.3-0.5-0.5-1.1-0.5-1.8S517.9,378.1,518.1,377.4z M524.7,379.7
-						c0.2-0.4,0.2-0.8,0-1.2c-0.2-0.4-0.5-0.7-1-1l-1.2,3.1l0.2,0.1c0.5,0.2,0.9,0.2,1.2,0C524.3,380.5,524.5,380.2,524.7,379.7z"/>
-				</g>
-			</g>
-			<g>
-				<g>
-					<path d="M515.7,314.5L527,316l-0.5,3.6c-0.1,1-0.5,1.9-1,2.7s-1.3,1.3-2.2,1.7c-0.9,0.4-1.9,0.5-2.9,0.3l-0.5-0.1
-						c-1-0.1-1.9-0.5-2.7-1.1s-1.3-1.3-1.6-2.2c-0.3-0.9-0.4-1.8-0.3-2.9L515.7,314.5z M524.7,318.2l-7.5-1l-0.2,1.2
-						c-0.1,1,0.1,1.7,0.6,2.3s1.3,1,2.4,1.1l0.6,0.1c1.1,0.2,2,0,2.7-0.4s1.1-1.1,1.2-2.1L524.7,318.2z"/>
-				</g>
-				<g>
-					<path d="M513.7,327.6l0.4-2.3l8.3,1.4L522,329L513.7,327.6z M524.7,326.9c0.3,0.1,0.6,0.2,0.8,0.5s0.2,0.6,0.2,1
-						c-0.1,0.4-0.2,0.7-0.5,0.9c-0.3,0.2-0.6,0.3-0.9,0.2c-0.3-0.1-0.6-0.2-0.8-0.5s-0.2-0.6-0.2-1c0.1-0.4,0.2-0.7,0.5-0.9
-						C524,326.9,524.3,326.9,524.7,326.9z"/>
-				</g>
-				<g>
-					<path d="M518.7,335.7c0.1-0.3,0.2-0.6,0.2-0.8c0.2-0.9,0-1.5-0.5-1.9l-5.4-1l0.4-2.3l8.3,1.6l-0.4,2.2l-1-0.1
-						c0.7,0.6,0.9,1.3,0.8,2.2c0,0.3-0.1,0.5-0.2,0.7L518.7,335.7z"/>
-				</g>
-				<g>
-					<path d="M511.2,339.3c0.3-1.3,0.9-2.2,1.8-2.8c0.9-0.6,2-0.8,3.2-0.5h0.2c0.8,0.2,1.5,0.5,2.1,1s1,1.1,1.2,1.8s0.2,1.4,0.1,2.2
-						c-0.3,1.2-0.8,2-1.7,2.6s-2,0.6-3.3,0.3l-0.9-0.2l1.2-5.5c-0.6,0-1,0.1-1.4,0.4s-0.7,0.7-0.8,1.3c-0.2,0.9-0.1,1.7,0.4,2.3
-						l-1.5,0.9c-0.4-0.5-0.6-1-0.8-1.7S511.1,340.1,511.2,339.3z M518,340.6c0.1-0.5,0-0.9-0.2-1.2s-0.6-0.6-1.1-0.8l-0.7,3.2h0.2
-						c0.5,0.1,0.9,0,1.2-0.2C517.7,341.5,517.9,341.1,518,340.6z"/>
-				</g>
-				<g>
-					<path d="M510.9,348.2c-0.1,0.4-0.1,0.8,0.1,1.1s0.4,0.5,0.8,0.6l-0.6,2.1c-0.6-0.2-1-0.4-1.4-0.9c-0.4-0.4-0.6-1-0.7-1.6
-						s-0.1-1.2,0.1-1.9c0.3-1.2,1-2.1,1.9-2.6s2.1-0.6,3.4-0.2h0.1c1.3,0.3,2.2,1,2.7,1.9s0.7,2,0.3,3.2c-0.3,1.1-0.8,1.9-1.6,2.3
-						c-0.8,0.5-1.6,0.6-2.6,0.4l0.6-2.1c0.4,0.1,0.8,0.1,1.1-0.1s0.6-0.5,0.7-0.9c0.1-0.5,0.1-1-0.2-1.4s-0.9-0.7-1.7-0.9l-0.2-0.1
-						c-0.8-0.2-1.5-0.3-1.9-0.1C511.3,347.3,511,347.6,510.9,348.2z"/>
-				</g>
-				<g>
-					<path d="M517.2,358.4l-2-0.6l-0.4,1.5l-1.6-0.5l0.4-1.5l-4-1.2c-0.3-0.1-0.5-0.1-0.7,0s-0.3,0.3-0.4,0.6
-						c-0.1,0.3-0.1,0.5-0.1,0.7l-1.6-0.5c0-0.5,0.1-1,0.2-1.4c0.5-1.6,1.5-2.2,3-1.7l4.4,1.3l0.4-1.2l1.6,0.5l-0.4,1.2l2,0.6
-						L517.2,358.4z"/>
-				</g>
-				<g>
-					<path d="M505.5,360.5l0.7-2.3l8,2.6l-0.7,2.3L505.5,360.5z M516.4,361.4c0.3,0.1,0.5,0.3,0.7,0.6c0.1,0.3,0.1,0.6,0,1
-						s-0.3,0.7-0.6,0.8c-0.3,0.2-0.6,0.2-0.9,0.1c-0.3-0.1-0.6-0.3-0.7-0.6c-0.1-0.3-0.1-0.6,0-1s0.3-0.7,0.6-0.8
-						C515.7,361.3,516,361.3,516.4,361.4z"/>
-				</g>
-				<g>
-					<path d="M509,363.4c0.8,0.3,1.4,0.7,1.9,1.2s0.8,1.2,0.9,1.9c0.1,0.7,0,1.5-0.2,2.3c-0.4,1.1-1.1,1.9-2,2.4s-1.9,0.5-3.1,0.2
-						l-0.5-0.2c-1.2-0.4-2.1-1.2-2.5-2.1s-0.5-2.1-0.1-3.3c0.4-1.2,1.1-2,2.1-2.5S507.7,362.9,509,363.4L509,363.4z M508.1,365.6
-						c-0.8-0.3-1.4-0.3-1.9-0.2c-0.5,0.2-0.9,0.5-1.1,1.1c-0.2,0.5-0.2,1,0.1,1.5s0.9,0.8,1.7,1.1c0.7,0.3,1.4,0.3,1.9,0.2
-						c0.5-0.2,0.9-0.5,1.1-1.1c0.2-0.5,0.1-1-0.1-1.5C509.5,366.3,508.9,365.9,508.1,365.6z"/>
-				</g>
-				<g>
-					<path d="M508.6,376.4l-0.9-0.3c0.5,0.9,0.5,1.8,0.1,2.8c-0.4,0.9-0.9,1.4-1.5,1.6c-0.7,0.2-1.5,0.1-2.5-0.2l-5.1-2.1l0.9-2.2
-						l5,2c0.4,0.2,0.8,0.2,1.1,0.1c0.3-0.1,0.5-0.4,0.7-0.9c0.3-0.6,0.2-1.2-0.2-1.7l-5.5-2.3l0.9-2.2l7.8,3.2L508.6,376.4z"/>
-				</g>
-			</g>
-		</g>
+		
+	<path class="st0" d="M576,289c-0.2,49.9-13.3,98.8-38.1,142.1L497.8,408c-0.6-0.3-1.1-0.7-1.7-1l0,0L456,383.8
+	c16.5-28.9,25.2-61.5,25.4-94.8h46.3v0.1c0.7,0,1.3-0.1,2-0.1H576z"/>
+<g>
+	<g>
+		<path class="st1" d="M527.2,325.6c-1.2-0.2-2-0.8-2.6-1.7c-0.6-0.9-0.8-2-0.6-3.4c0.2-1.5,0.8-2.6,1.9-3.3s2.4-1,4-0.7l0.7,0.1
+			c1,0.1,1.9,0.5,2.7,1c0.7,0.5,1.3,1.1,1.6,1.9c0.3,0.8,0.4,1.6,0.3,2.6c-0.2,1.3-0.7,2.3-1.4,3c-0.8,0.7-1.8,1.1-3,1l0.3-2.4
+			c0.7,0,1.2-0.1,1.6-0.4c0.4-0.3,0.6-0.8,0.7-1.5c0.1-0.8-0.1-1.4-0.6-1.9s-1.3-0.8-2.4-0.9l-0.8-0.1c-1.2-0.2-2.1-0.1-2.7,0.2
+			s-0.9,0.9-1.1,1.7c-0.1,0.7,0,1.3,0.3,1.7c0.3,0.4,0.7,0.7,1.4,0.8L527.2,325.6z"/>
+		<path class="st1" d="M528.5,332.3c0.1-0.3,0.2-0.6,0.2-0.8c0.1-0.9,0-1.5-0.5-1.8l-5.3-0.9l0.4-2.3l8,1.4l-0.4,2.1l-1-0.1
+			c0.7,0.6,0.9,1.3,0.8,2.1c0,0.2-0.1,0.5-0.2,0.7L528.5,332.3z"/>
+		<path class="st1" d="M521.4,336c0.2-1.2,0.8-2.2,1.7-2.8c0.9-0.6,1.9-0.8,3.1-0.6l0.2,0c0.8,0.2,1.5,0.5,2.1,0.9
+			c0.6,0.5,1,1,1.2,1.7c0.2,0.7,0.3,1.4,0.1,2.1c-0.2,1.1-0.8,2-1.6,2.5s-1.9,0.7-3.1,0.4l-0.9-0.2l1.1-5.3c-0.5,0-1,0.1-1.4,0.4
+			c-0.4,0.3-0.6,0.7-0.8,1.3c-0.2,0.9,0,1.6,0.5,2.2l-1.4,0.9c-0.4-0.4-0.6-1-0.8-1.6C521.2,337.4,521.2,336.7,521.4,336z
+			 M528,337.1c0.1-0.4,0-0.8-0.2-1.2c-0.2-0.3-0.6-0.6-1.1-0.8l-0.6,3.1l0.2,0c0.5,0.1,0.9,0,1.2-0.2S527.9,337.6,528,337.1z"/>
+		<path class="st1" d="M519.4,345.6c0.2-0.1,0.5-0.1,0.8-0.1c-0.4-0.7-0.6-1.4-0.4-2.3c0.2-0.8,0.6-1.4,1.2-1.9
+			c0.6-0.4,1.2-0.6,1.9-0.4c0.8,0.2,1.4,0.7,1.7,1.4s0.3,1.8,0,3l-0.2,1l0.5,0.1c0.4,0.1,0.7,0.1,1-0.1s0.5-0.4,0.6-0.9
+			c0.1-0.4,0.1-0.7,0-0.9c-0.1-0.3-0.3-0.4-0.6-0.5l0.5-2.2c0.5,0.1,0.8,0.4,1.2,0.8c0.3,0.4,0.5,0.9,0.6,1.5
+			c0.1,0.6,0.1,1.2-0.1,1.9c-0.2,1-0.7,1.8-1.3,2.3s-1.4,0.6-2.3,0.4l-3.4-0.8c-0.8-0.2-1.3-0.2-1.8-0.1l-0.1,0L519.4,345.6z
+			 M521.3,344.1c-0.1,0.3-0.1,0.6,0,1c0.1,0.3,0.2,0.6,0.4,0.8l1.4,0.3l0.2-0.8c0.3-1.1,0-1.8-0.7-2l-0.1,0c-0.3-0.1-0.5,0-0.7,0.1
+			C521.5,343.5,521.4,343.7,521.3,344.1z"/>
+		<path class="st1" d="M527.5,354.5l-1.9-0.5l-0.4,1.4l-1.5-0.4l0.4-1.4l-3.9-1.1c-0.3-0.1-0.5-0.1-0.7,0c-0.2,0.1-0.3,0.3-0.4,0.6
+			c-0.1,0.2-0.1,0.5-0.1,0.7l-1.6-0.4c0-0.5,0.1-0.9,0.2-1.4c0.4-1.5,1.4-2.1,2.9-1.8l4.2,1.2l0.3-1.2l1.5,0.4l-0.3,1.2l1.9,0.5
+			L527.5,354.5z"/>
+		<path class="st1" d="M516.3,356.8l0.7-2.2l7.8,2.3l-0.7,2.2L516.3,356.8z M526.8,357.4c0.3,0.1,0.5,0.3,0.7,0.6
+			c0.1,0.3,0.2,0.6,0,1c-0.1,0.4-0.3,0.6-0.6,0.8c-0.3,0.2-0.6,0.2-0.9,0.1c-0.3-0.1-0.5-0.3-0.7-0.6s-0.1-0.6,0-1
+			c0.1-0.4,0.3-0.6,0.6-0.8C526.2,357.3,526.5,357.3,526.8,357.4z"/>
+		<path class="st1" d="M517.3,362.5l4.7,3.2l-0.7,2.3l-6.9-5.3l0.7-2.1l8.7-0.2l-0.7,2.3L517.3,362.5z"/>
+		<path class="st1" d="M512.3,368.7l0.8-2.2l7.7,2.7l-0.8,2.2L512.3,368.7z M522.8,369.9c0.3,0.1,0.5,0.3,0.6,0.6
+			c0.1,0.3,0.1,0.6,0,1c-0.1,0.4-0.3,0.6-0.6,0.8s-0.6,0.2-0.9,0.1c-0.3-0.1-0.5-0.3-0.6-0.6c-0.1-0.3-0.1-0.6,0-1
+			c0.1-0.4,0.3-0.6,0.6-0.8C522.2,369.8,522.5,369.7,522.8,369.9z"/>
+		<path class="st1" d="M520.2,376.7l-1.9-0.7l-0.5,1.4l-1.5-0.6l0.5-1.4l-3.8-1.4c-0.3-0.1-0.5-0.1-0.7-0.1
+			c-0.2,0.1-0.3,0.3-0.4,0.6c-0.1,0.2-0.2,0.5-0.2,0.6l-1.5-0.6c0-0.5,0.1-0.9,0.3-1.4c0.6-1.5,1.6-2,3-1.5l4.1,1.6l0.4-1.2
+			l1.5,0.6l-0.4,1.2l1.9,0.7L520.2,376.7z"/>
+		<path class="st1" d="M511.4,379.8l4.1,3.4l-0.9,2.3l-7.4-6.8l-0.3-0.3c-0.8-0.9-1-1.9-0.5-3c0.1-0.3,0.3-0.6,0.5-0.9l1.5,0.6
+			l-0.1,0.3c-0.2,0.4-0.2,0.7-0.2,1c0,0.2,0.2,0.5,0.4,0.7l0.5,0.5l8.7,0.3l-0.9,2.3L511.4,379.8z"/>
+	</g>
+	<g>
+	</g>
+</g>
 	</g>
 	<g class="grigio grigio_03">
 		<path class="st0" d="M576,287h-46.3c-0.7,0-1.3,0-2-0.1v0.1h-46.3c-0.2-33.3-8.9-65.9-25.4-94.8l40.1-23.2l0,0
