--- a/categorie-vaccinate.html
+++ b/categorie-vaccinate.html
@@ -2,10 +2,7 @@
 <html lang="it">
 
 <head>
-    <!-- OneTrust Cookies Consent Notice start -->
-    <script src="https://cdn.cookielaw.org/scripttemplates/otSDKStub.js" type="text/javascript" charset="UTF-8" data-domain-script="2d60e7d5-2a98-42f8-8f63-b68b8ff4b575"></script>
-    <script type="text/javascript" charset="UTF-8" src="https://cdn.cookielaw.org/opt-out/otCCPAiab.js" ccpa-opt-out-ids="C0002, C0003, C0004, C0005" ccpa-opt-out-lspa=false ccpa-opt-out-geo="ca"></script>
-    <!-- OneTrust Cookies Consent Notice end -->
+
     <script>
         /* setting global vars CMP */
         var oneTrustLoaded = false;
@@ -320,6 +317,10 @@
                 <a class="bottone-off corpo bold" href="./fornitori-vaccini.html">
                         Quali sono i fornitori di vaccini?
                     </a>
+
+                <a class="bottone-off corpo bold" href="./covid.html">
+                        Quali sono gli effetti della campagna vaccinale?
+                        </a>
 
                 <div class="legenda">
                     <div class="sottotitolo">• LEGENDA:</div>
