--- a/fornitori-vaccini.html
+++ b/fornitori-vaccini.html
@@ -2,10 +2,6 @@
 <html lang="it">
 
 <head>
-    <!-- OneTrust Cookies Consent Notice start -->
-    <script src="https://cdn.cookielaw.org/scripttemplates/otSDKStub.js" type="text/javascript" charset="UTF-8" data-domain-script="2d60e7d5-2a98-42f8-8f63-b68b8ff4b575"></script>
-    <script type="text/javascript" charset="UTF-8" src="https://cdn.cookielaw.org/opt-out/otCCPAiab.js" ccpa-opt-out-ids="C0002, C0003, C0004, C0005" ccpa-opt-out-lspa=false ccpa-opt-out-geo="ca"></script>
-    <!-- OneTrust Cookies Consent Notice end -->
     <script>
         /* setting global vars CMP */
         var oneTrustLoaded = false;
@@ -289,13 +285,17 @@
                 <div class="descrizione corpo">
                     Ecco come stanno andando consegne e utilizzo delle dosi a seconda dei diversi vaccini.</div>
 
+                <a class="bottone-off corpo bold" href="./covid.html">
+                        Quali sono gli effetti della campagna vaccinale?
+                        </a>
 
                 <div class="legenda">
                     <div class="sottotitolo">• LEGENDA:</div>
                     <div class="corpo"></div>Il colore indica i diversi fornitori di vaccino:
                     <span style="color:#FFFDF5; background-color:#BE4C6E; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">PFIZER/BIONTECH</span>,
-                    <span style="color:#FFFDF5; background-color:#F47D70; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">ASTRAZENECA</span> e
-                    <span style="color:#FFFDF5; background-color:#A59ED9; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">MODERNA</span>
+                    <span style="color:#FFFDF5; background-color:#F28E2C; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">VAXEVRIA-ASTRAZENECA</span>,
+                    <span style="color:#FFFDF5; background-color:#A59ED9; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">MODERNA</span> e
+                    <span style="color:#FFFDF5; background-color:#1258AA; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">JANSSEN</span>
                 </div>
             </div>
         </div>
